--- a/resources/css/workspace/views/list.css
+++ b/resources/css/workspace/views/list.css
@@ -31,6 +31,10 @@
   touch-action: none;
 }
 
+.list__element--selected {
+  background: rgba(0, 0, 0, 0.1);
+}
+
 @media (min-width: 300px) {
   .list__element {
     flex-direction: row;
