--- a/resources/css/workspace/views/list.css
+++ b/resources/css/workspace/views/list.css
@@ -26,7 +26,7 @@
   flex: 1;
   margin: 0;
   min-width: 0;
-  padding: 0.5rem 20px;
+  padding: 0.3rem 20px;
   text-decoration: none;
   touch-action: none;
 }
@@ -41,7 +41,6 @@
     flex-direction: row;
     flex-wrap: nowrap;
     overflow: hidden;
-    padding: 0.3rem 20px;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
@@ -65,7 +64,6 @@
 .list__title {
   display: block;
   margin: 0;
-  margin-bottom: 0.25rem;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -78,7 +76,6 @@
 @media (min-width: 300px) {
   .list__title {
     display: inline;
-    margin-bottom: 0;
     margin-right: 3px;
     overflow: unset;
     text-overflow: unset;
@@ -89,6 +86,7 @@
   color: var(--vscode-list-deemphasizedForeground);
   display: block;
   margin: 0;
+  margin-top: 0.25rem;
   opacity: 0.75;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -103,6 +101,7 @@
 @media (min-width: 300px) {
   .list__description {
     display: inline;
+    margin-top: 0;
   }
 }
 
