--- a/resources/css/workspace/views/list.css
+++ b/resources/css/workspace/views/list.css
@@ -27,6 +27,7 @@
   margin: 0;
   min-width: 0;
   padding: 0.3rem 20px;
+  position: relative;
   text-decoration: none;
   touch-action: none;
 }
@@ -109,4 +110,33 @@
 .list__element:focus .list__description,
 .list__element:active .list__description {
   opacity: 1;
+}
+
+.list__icon {
+  align-items: center;
+  background: var(--vscode-list-hoverBackground);
+  display: inline-flex;
+  display: none;
+  height: 100%;
+  justify-content: center;
+  line-height: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: absolute;
+  right: 0px;
+  top: 0;
+  white-space: nowrap;
+  width: 20px;
+}
+
+.list__element:hover .list__icon {
+  display: inline-flex;
+}
+
+body.vscode-light .list__icon img[data-theme='dark'] {
+  display: none;
+}
+
+body.vscode-dark .list__icon img[data-theme='light'] {
+  display: none;
 }
