--- a/resources/css/workspace/views/list.css
+++ b/resources/css/workspace/views/list.css
@@ -11,7 +11,6 @@
 }
 
 .list__item {
-  cursor: pointer;
   display: flex;
   margin: 0;
   padding: 0;
@@ -20,7 +19,6 @@
 
 .list__element {
   color: var(--vscode-editorWidget-foreground);
-  cursor: pointer;
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -30,6 +28,10 @@
   position: relative;
   text-decoration: none;
   touch-action: none;
+}
+
+.list__element--unselected {
+  cursor: pointer;
 }
 
 .list__element--selected {
