--- a/resources/css/workspace/views/error.css
+++ b/resources/css/workspace/views/error.css
@@ -129,5 +129,14 @@
 }
 
 .list__icon {
+  align-items: flex-start;
+  display: inline-flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  line-height: 100%;
+  position: absolute;
   top: 0.2rem;
+  white-space: nowrap;
+  width: 20px;
 }
