--- a/resources/css/workspace/views/list.css
+++ b/resources/css/workspace/views/list.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  font-size: var(--vscode-font-size);
   margin: 0;
   min-width: 0;
   padding: 0.3rem 20px;
