--- a/resources/css/workspace/snippets/list.css
+++ b/resources/css/workspace/snippets/list.css
@@ -22,6 +22,7 @@
 }
 
 .list__styled-item {
+  color: var(--vscode-editorWidget-foreground);
   display: flex;
   margin: 0;
   padding: 0;
@@ -30,7 +31,6 @@
 }
 
 .list__element {
-  color: var(--vscode-editorWidget-foreground);
   display: flex;
   flex-direction: column;
   flex: 1;
@@ -43,11 +43,11 @@
   touch-action: none;
 }
 
-.list__element--unselected {
+.list__styled-item--unselected {
   cursor: pointer;
 }
 
-.list__element--selected {
+.list__styled-item--selected {
   background: var(--vscode-list-activeSelectionBackground);
   color: var(--vscode-list-activeSelectionForeground);
 }
@@ -62,18 +62,18 @@
   }
 }
 
-.list__element:hover {
+.list__styled-item:hover {
   background: var(--vscode-list-hoverBackground);
   color: var(--vscode-editorWidget-foreground);
 }
 
-.list__element:focus {
+.list__styled-item:focus {
   outline: none;
   background: var(--vscode-list-focusBackground);
   color: var(--vscode-editorWidget-foreground);
 }
 
-.list__element:active {
+.list__styled-item:active {
   color: var(--vscode-editorWidget-foreground);
 }
 
@@ -121,9 +121,9 @@
   }
 }
 
-.list__element:hover > .list__description,
-.list__element:focus > .list__description,
-.list__element:active > .list__description {
+.list__styled-item:hover > .list__element > .list__description,
+.list__styled-item:focus > .list__element > .list__description,
+.list__styled-item:active > .list__element > .list__description {
   opacity: 1;
 }
 
@@ -143,7 +143,7 @@
   width: 20px;
 }
 
-.list__element:hover > .list__buttons {
+.list__styled-item:hover > .list__element > .list__buttons {
   display: inline-flex;
 }
 
@@ -153,12 +153,4 @@
 
 .list--empty .list__icon {
   top: 0.3rem;
-}
-
-.list__styled-list--tree {
-  position: relative;
-}
-
-.list__styled-list--tree .list__item:not(.list__branch-list-item) {
-  padding-left: 10px;
 }
