--- a/resources/css/workspace/snippets/tree.css
+++ b/resources/css/workspace/snippets/tree.css
@@ -20,88 +20,17 @@
   width: 10px;
 }
 
-.list__branch-list-item > .list__element {
+/* .list__branch-list-item > .list__element {
   flex-direction: row;
+} */
+
+.list_branch-icon {
+  left: 20px;
+  position: absolute;
+  top: 0.3rem;
 }
 
 .list_branch-icon-empty {
+  min-width: 16px;
   width: 16px;
 }
-
-/* .list__branch-list-item .list__item::before {
-  background: rgba(169, 169, 169, 0.4);
-  content: '';
-  display: inline-block;
-  height: 100%;
-  left: 10px;
-  position: absolute;
-  top: 0;
-  width: 1px;
-  z-index: 2;
-}
-
-.list__branch-list-item {
-  position: relative;
-}
-
-.list__branch-list-item > .list__element {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 0;
-  padding-right: 0;
-}
-
-.list__branch-list-item > .list__element:hover {
-  background: unset;
-}
-
-.list__branch-list-item > .list__element .list__element {
-  padding-right: 0;
-}
-
-.list__branch-list-item > .list__element > .list__title {
-  padding-bottom: 0.3rem;
-  padding-left: 20px;
-}
-
-.list__branch-list-item > .list__element:focus {
-  background: unset;
-}
-
-.list_branch-icon {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-
-  -ms-user-select: none;
-  -webkit-user-select: none;
-  user-select: none;
-
-  align-items: center;
-  display: flex;
-  flex-shrink: 0;
-  font: normal normal normal 16px/1 sans-serif, codicon;
-  height: 16px;
-  justify-content: center;
-  position: absolute;
-  text-align: right;
-  transform: translateX(3px);
-  width: 16px;
-}
-
-.list_branch-indent-box {
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  padding-left: 30px;
-  position: relative;
-}
-
-.list_branch-indent {
-  border-left: 1px solid red;
-  box-sizing: border-box;
-  display: inline-block;
-  height: 100%;
-  transition: border-color 0.1s linear;
-  width: 8px;
-}
- */
