--- a/resources/css/webview-workspace.css
+++ b/resources/css/webview-workspace.css
@@ -36,11 +36,19 @@ body.vscode-dark img[data-theme='light'] {
 .view__message {
   color: var(--vscode-editorWidget-foreground);
   margin: 0;
+  position: relative;
+}
+
+.view__message-icon {
+  left: 0px;
+  position: absolute;
+  top: 0;
 }
 
 .view__message-title {
   display: block;
   margin: 0;
+  padding-left: 24px;
 }
 
 .view__message-description {
@@ -48,6 +56,7 @@ body.vscode-dark img[data-theme='light'] {
   display: block;
   margin: 0;
   margin-top: 0.2rem;
+  padding-left: 24px;
 }
 
 .view__link {
