--- a/resources/css/workspace/snippets/tree.css
+++ b/resources/css/workspace/snippets/tree.css
@@ -38,3 +38,7 @@
 .list__branch-list-item-folder .list__title {
   opacity: 0.66;
 }
+
+.list__branch-list-item-folder.list__styled-item--selected .list__title {
+  opacity: 1;
+}
