--- a/resources/css/webview-workspace.css
+++ b/resources/css/webview-workspace.css
@@ -3,6 +3,10 @@
 @import './workspace/views/list.css';
 @import './workspace/views/loading.css';
 
+:root {
+  --ext-workspace-sidebar__search-offset: 84px;
+}
+
 body {
   padding: 0;
 }
@@ -71,4 +75,18 @@ body.vscode-dark img[data-theme='light'] {
 
 .view__link:active {
   color: var(--vscode-textLink-activeForeground);
+}
+
+
+.a11y__screenreader-text {
+	border: 0;  
+	clip-path: inset(50%);  
+	clip: rect(0, 0, 0, 0);  
+	height: 1px;  
+	margin: -1px;  
+	overflow: hidden;  
+	padding: 0;  
+	position: absolute;  
+	white-space: nowrap;  
+	width: 1px;  
 }
