--- a/resources/css/workspace/snippets/search.css
+++ b/resources/css/workspace/snippets/search.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 30px;
+  height: var(--ext-workspace-sidebar__search-offset);
   justify-content: flex-start;
   left: 0;
   padding: 0 20px;
