--- a/resources/css/workspace/snippets/list.css
+++ b/resources/css/workspace/snippets/list.css
@@ -10,7 +10,7 @@
 }
 
 .list[data-showsearch='true'] .list__styled-list {
-  padding-top: 30px;
+  padding-top: var(--ext-workspace-sidebar__search-offset);
 }
 
 .list[data-folderopen='true'] .list__styled-list {
@@ -49,7 +49,7 @@
 
 .list__styled-item--selected {
   background: var(--vscode-list-activeSelectionBackground);
-  color: var(--vscode-list-activeSelectionForeground);
+  color: var(--vscode-editor-foreground);
 }
 
 .list__text {
@@ -59,6 +59,22 @@
   position: relative;
   text-decoration: none;
   touch-action: none;
+}
+
+.list__description {
+  color: var(--vscode-list-deemphasizedForeground);
+  display: block;
+  margin: 0;
+  margin-top: 0.25rem;
+  opacity: 0.75;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.list__styled-item--selected .list__element .list__description {
+  color: var(--vscode-list-activeSelectionForeground);
+  opacity: 1;
 }
 
 @media (min-width: 300px) {
@@ -107,22 +123,6 @@
   }
 }
 
-.list__description {
-  color: var(--vscode-list-deemphasizedForeground);
-  display: block;
-  margin: 0;
-  margin-top: 0.25rem;
-  opacity: 0.75;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.list__styled-item--selected .list__element .list__description {
-  color: var(--vscode-list-activeSelectionForeground);
-  opacity: 1;
-}
-
 @media (min-width: 300px) {
   .list__description {
     display: inline;
@@ -162,4 +162,13 @@
 
 .list--empty .list__icon {
   top: 0.3rem;
+}
+
+.list__styled-item mark {
+  background: var(--vscode-editor-findMatchHighlightBackground);
+  color: var(--vscode-editorWidget-foreground);
+}
+
+.list__styled-item--selected mark {
+  color: var(--vscode-editor-foreground);
 }
