--- a/resources/css/workspace/snippets/tree.css
+++ b/resources/css/workspace/snippets/tree.css
@@ -52,7 +52,23 @@
 } */
 
 .list_branch-icon.file-icon {
-  top: 0.15rem;
-  width: 22px;
+  display: flex;
   height: 22px;
+  line-height: 22px;
+  top: 0.05rem;
+  width: 22px;
+}
+
+.list_branch-icon.file-icon::before {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  background-position: 0;
+  background-repeat: no-repeat;
+  background-size: 22px;
+  display: inline-block;
+  flex-shrink: 0;
+  height: 22px;
+  line-height: inherit !important;
+  vertical-align: top;
+  width: 22px;
 }
