--- a/resources/css/workspace/snippets/list.css
+++ b/resources/css/workspace/snippets/list.css
@@ -56,6 +56,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  padding-left: 22px;
   position: relative;
   text-decoration: none;
   touch-action: none;
