--- a/resources/css/workspace/snippets/list.css
+++ b/resources/css/workspace/snippets/list.css
@@ -17,6 +17,10 @@
   padding-top: 0;
 }
 
+.list[data-fileiconsactive='false'] .list__text {
+  padding-left: 1px;
+}
+
 .list--empty {
   padding: 0.3rem 20px;
 }
@@ -56,7 +60,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding-left: 22px;
+  padding-left: 20px;
   position: relative;
   text-decoration: none;
   touch-action: none;
