--- a/resources/css/workspace/snippets/list.css
+++ b/resources/css/workspace/snippets/list.css
@@ -56,9 +56,14 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  padding-left: 20px;
   position: relative;
   text-decoration: none;
   touch-action: none;
+}
+
+.list[data-fileiconsactive='false'] .list__text {
+  padding-left: 1px;
 }
 
 .list__description {
