chore: rename classes

--- a/resources/css/workspace/snippets/list.css
+++ b/resources/css/workspace/snippets/list.css
@@ -197,7 +197,7 @@
   margin-top: 0.9rem;
 }
 
-.list__list-rootLabel {
+.list__list-section-label {
   font-size: 11px;
   margin: 0.3rem 0;
   overflow: hidden;
