feat(list-view): add extws message

--- a/resources/css/workspace/views/list.css
+++ b/resources/css/workspace/views/list.css
@@ -2,3 +2,4 @@
 @import '../snippets/search.css';
 @import '../snippets/tree.css';
 @import '../snippets/folder.css';
+@import '../snippets/extws.css';
