--- a/resources/css/workspace/snippets/list.css
+++ b/resources/css/workspace/snippets/list.css
@@ -17,7 +17,8 @@
   padding-top: var(--ext-workspace-sidebar__search-offset);
 }
 
-.list[data-folderopen='true'] .list__list-wrapper {
+.list[data-folderopen='true'] .list__list-wrapper,
+.list[data-extws='true'] .list__list-wrapper {
   padding-top: 0;
 }
 
@@ -199,4 +200,23 @@
   margin: 0;
   padding: var(--ext-workspace-sidebar__padding-v) var(--ext-workspace-sidebar__padding-h);
   padding-left: 40px;
+}
+
+.list[data-showsearch='true'] .list__styled-pusher {
+  margin-top: var(--ext-workspace-sidebar__search-offset);
+}
+
+.list[data-showsearch='false'] .list__styled-pusher .list__styled-pusher-title {
+  margin-top: 0;
+  padding-top: 0;
+}
+
+.list__styled-pusher-divider {
+  margin-top: -4px;
+}
+
+.list__styled-pusher-controls {
+  padding-bottom: 0.7rem;
+  padding-top: var(--ext-workspace-sidebar__padding-v);
+  text-align: center;
 }
